# scdb_mysql_speed

./: .readthedocs.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/help_ver0.3.0/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  scdb_mysql_speed.html  search.html  searchindex.js
docs/help_ver0.3.0/_modules/: index.html
docs/help_ver0.3.0/_modules/scdb_mysql_speed/: core.html  exceptions.html  meta.html  pool.html
docs/help_ver0.3.0/_sources/: modules.rst.txt  scdb_mysql_speed.rst.txt
docs/help_ver0.3.0/_static/: documentation_options.js
docs/source/: conf.py  index.rst
src/scdb_mysql_speed/: __init__.py  core.py  exceptions.py  meta.py  pool.py
tests/: create_test_db.sql  test_core.py  test_integration.py  test_meta.py  test_pool.py
