[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scdb_mysql_speed"
version = "1.0.0"
description = "高性能、工业级的 MySQL 数据库操作 Python 包"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ashida"},
]

dependencies = [
    "mysqlclient>=2.2.0",
]

[project.optional-dependencies]
dataframe = [
    "pandas>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
